--- a/index.css
+++ b/index.css
@@ -3,6 +3,43 @@
     display: none;
 }
 
+body {
+    background-color: black;
+}
 .showing {
     display: block;
+}
+
+
+
+h1 {
+    color: aliceblue;
+}
+
+h4 {
+    color: aliceblue;
+}
+
+span {
+    color: aliceblue;
+    font-size: 20px;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.bgImage {
+    position : absolute;
+    top: 0;
+    left: 0;
+    width : 100%;
+    height: 100%;
+    z-index: -1;
+    animation : fadeIn 3s linear;
 }
