--- a/index.css
+++ b/index.css
@@ -33,6 +33,9 @@ h4 {
     color: aliceblue;
     font-size: 60px;
     text-align: center;
+    opacity: 0.5;
+    background-color: black;
+    animation: fadeIn 3s linear;
 }
 
 span {
