--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ h1 {
     border-radius: 20px;
     height: 150px;
     margin-bottom: 0;
+    margin-block-start: 20px;
     
 }
 
@@ -35,7 +36,9 @@ h4 {
     text-align: center;
     opacity: 0.5;
     background-color: black;
-    animation: fadeIn 3s linear;
+    animation: fadeIn 2s linear;
+    margin-block-start: 0 ;
+    margin-block-end :0;
 }
 
 span {
@@ -102,7 +105,7 @@ li {
 }
 .content {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .from {
@@ -120,6 +123,7 @@ li {
 
 .todoform {
     animation: fadeIn 1s linear;
+    margin-top: 20px;
 }
 
 .js-day {
@@ -131,4 +135,22 @@ li {
     border-bottom: 5px solid white;
     border-radius: 30px;
     padding: 8px;
+}
+.weatherBox {
+    opacity: 0.8;
+    border: 2px solid black;
+    padding : 3px;
+    border-radius: 10px;
+    height: 50px;
+    animation: fadeIn 1s linear;
+    
+    
+
+}
+.copyright {
+    margin-left: 15px;
+    font-weight: 600;
+    color: white;
+    margin-top: 3px;
+    animation: fadeIn 5s linear;
 }
